fix(TextInfo): text align

--- a/src/components/TextInfo/style.scss
+++ b/src/components/TextInfo/style.scss
@@ -2,6 +2,7 @@
 
 .ev-text-info {
   display: flex;
+  align-items: center;
   border-radius: 0.625rem;
   padding: 0.625rem 0.9375rem;
   gap: 0.31rem;
